[package]
name = "generate-assets"
version = "0.1.0"
authors = [
  "Bevy Contributors <bevyengine@gmail.com>",
  "Carter Anderson <mcanders1@gmail.com>",
]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = [ "derive" ] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.11.4", features = [ "json", "blocking" ] }
cratesio-dbdump-csvtab = { version = "0.2.2" }
cratesio-dbdump-lookup = { git = "https://github.com/BlackPhlox/cratesio-dbdump-lookup" }